--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
   ],
   "types": "./types",
   "dependencies": {
+    "@samverschueren/stream-to-observable": "^0.3.0",
     "commander": "^2.15.1",
     "execa": "^0.10.0",
     "listr": "^0.14.1",
     "rimraf": "^2.6.2",
+    "rxjs": "^6.2.0",
+    "split": "^1.0.1",
     "update-notifier": "^2.5.0",
     "util": "^0.10.3"
   },
