improve error handling

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "commander": "^2.15.1",
     "execa": "^0.10.0",
     "listr": "^0.14.1",
+    "log-symbols": "^2.2.0",
     "rimraf": "^2.6.2",
     "rxjs": "^6.2.0",
     "split": "^1.0.1",
