--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "qlone": "./index.js"
   },
   "scripts": {
-    "build": "tsc --project ./",
+    "build": "tsc --pretty --project ./",
+    "dev": "tsc --watch --pretty --project ./",
     "lint": "tslint --project ./",
     "test": "echo \"Error: no test specified\" && exit 0"
   },
